Cropped lines @ *) char. and corrected some grammer.
--HG--
extra : convert_revision : 6ec81a8ceda32dffa7a91d9bf0c3173ca5f1f829

--- a/wedding.tex
+++ b/wedding.tex
@@ -3,7 +3,8 @@
 \mainlanguage [en]
 \setuppapersize[letter][letter]
 \setuppagenumbering[state=off]
-\setuphead[section][align={center, nothyphenated, verytolerant},textstyle=\sc \tfc]
+\setuphead[section][align={center, nothyphenated, verytolerant},
+  textstyle=\sc \tfc]
 \setupbodyfont[10pt]
 \setupinteraction[state=start,  
   title={Katterhenry-Showalter Wedding Ceremony},
@@ -15,51 +16,74 @@
 ]
 \starttext
 \section{Processional}
-\midaligned{\em /* Wedding party rolls in (looking slick), then Laura (Dress worked out great) */}
+  \midaligned{\em /* Wedding party rolls in (looking slick), then Laura (Dress 
+                     worked out great) */}
 \section{Welcome}
-\midaligned{\em /* Perhaps most importantly, I look awesome. Now I greet some people, on with the show. */}
+  \midaligned{\em /* Perhaps most importantly, I look awesome. Now I greet some 
+                     people, on with the show. */}
 \blank[big]
 Officiant: 
-\startnarrower Welcome, family and friends. We gather here today to celebrate the wedding of Laura and Jason. You have come here to share in this commitment they make to one another, to offer your love and support to this union, and to allow Laura and Jason to start their married life together surrounded by the those most important to them.
-\blank
-Jason and Laura thank you for your presence here today, and now ask for your blessing, encouragement, and lifelong support, for their decision to be married.
-\blank[big]
+\startnarrower 
+  Welcome, family and friends. We gather here today to celebrate the wedding of
+  Laura and Jason. You have come here to share in this commitment they make to 
+  one another, to offer your love and support to this union, and to allow Laura
+  and Jason to start their married life together surrounded by the those most 
+  important to them.
+  \blank
+  Jason and Laura thank you for your presence here today, and now ask for your 
+  blessing, encouragement, and lifelong support, for their decision to be 
+  married.
+  \blank[big]
 \stopnarrower
 \section{Definition of Marriage}
-\midaligned{\em /* I, the great dateless wonder, will proceed to school you two on the meaning of marriage.}
-\midaligned{\em Contrary to popular believe, It's serious business! */}
-\blank[big]
-Officiant: 
-\startnarrower Marriage is perhaps the greatest and most challenging adventure of human relationships. No ceremony can create your marriage; only you can do that – through love and patience; through dedication and perseverance; through talking and listening, helping and supporting and believing in each other; through tenderness and laughter; through learning to forgive, learning to appreciate your differences, and by learning to make the important things matter, and to let go of the rest. What this ceremony can do is to witness and affirm the choice you make to stand together as lifemates and partners.
-\blank[big]
+  \midaligned{\em /* I, the great dateless wonder, will proceed to school you 
+                     two on the meaning of marriage.}
+  \midaligned{\em Contrary to popular believe, It's serious business! */}
+  \blank[big]
+  Officiant: 
+  \startnarrower Marriage is perhaps the greatest and most challenging 
+  adventure of human relationships. No ceremony can create your marriage; only 
+  you can do that – through love and patience; through dedication and 
+  perseverance; through talking and listening, helping and supporting and 
+  believing in each other; through tenderness and laughter; through learning 
+  to forgive, learning to appreciate your differences, and by learning to make 
+  the important things matter, and to let go of the rest. What this ceremony 
+  can do is to witness and affirm the choice you make to stand together as 
+  lifemates and partners.
+  \blank[big]
 \stopnarrower
 
 \section{Declaration of Intent}
-\midaligned{\em /* Do you? How 'bout you? Last chance to pull the eject handle. */}
-\blank[big]
-Officiant: 
-\startnarrower Will you, Jason, take this woman to be your wedded wife?
-\stopnarrower
-Groom: 
-\startnarrower I will
-\stopnarrower
-Officiant: 
-\startnarrower Will you, Laura, take this man to be your wedded husband?
-\stopnarrower
-Bride:
-\startnarrower I will
-\stopnarrower
-\blank[big]
+  \midaligned{\em /* Do you? How 'bout you? Last chance to pull the eject 
+                     handle. */}
+  \blank[big]
+  Officiant: 
+  \startnarrower Will you, Jason, take this woman to be your wedded wife?
+  \stopnarrower
+  Groom: 
+  \startnarrower I will
+  \stopnarrower
+  Officiant: 
+  \startnarrower Will you, Laura, take this man to be your wedded husband?
+  \stopnarrower
+  Bride:
+  \startnarrower I will
+  \stopnarrower
+  \blank[big]
 \section{Readings}
-\midaligned{\em /* Welp, you're in the shit now, I guess we better read some things that people smarter than us wrote...}
-\midaligned{\em It'll sound fancy! */}
-\blank[big]
-Officiant: 
-\startnarrower In the spirit of the importance of strong friendships to a marriage, Laura and Jason have asked two friends to read selections about love that especially resonate with them.
-\stopnarrower
-\blank[big]
-\midaligned{\sc 1st Reading}
-\midaligned{\em /* I suggest Dr. Suess, he was married... and he fought facism! */}
+  \midaligned{\em /* Welp, you're in the shit now, I guess we better read some 
+                     things that people smarter than us wrote...}
+  \midaligned{\em It'll sound fancy! */}
+  \blank[big]
+  Officiant: 
+  \startnarrower In the spirit of the importance of strong friendships to a 
+  marriage, Laura and Jason have asked two friends to read selections about 
+  love that especially resonate with them.
+  \stopnarrower
+  \blank[big]
+  \midaligned{\sc 1st Reading}
+  \midaligned{\em /* I suggest Dr. Suess, he was married... and he fought 
+                     facism! */}
 \startlines
 \startalignment[center]
 ``Oh the Places You'll Go''
@@ -101,15 +125,16 @@ Just never forget to be dexterous and deft.
 And never mix up your right foot with your left.
 And will you succeed?
 Yes! You will indeed!
-98 and ¾ percent guaranteed.
+98 and 3/4 percent guaranteed.
 \stopalignment
 \stoplines
-\blank[big]
-\midaligned{\em /* What? You think you can do better? */}
-\blank[big]
-\midaligned{\sc 2nd Reading}
-\midaligned{\em /* I suggest something out of Psalms... to keep the fundie's from rioting. */}
-\blank[big]
+  \blank[big]
+  \midaligned{\em /* What? You think you can do better? */}
+  \blank[big]
+  \midaligned{\sc 2nd Reading}
+  \midaligned{\em /* I suggest something out of Psalms... to keep the fundie's 
+                     from rioting. */}
+  \blank[big]
 \startalignment[center]
 \startlines
 We have no need of words, you and I
@@ -131,54 +156,76 @@ a glimpse of heaven makes me want you to send me to hell!
 \stoplines
 \stopalignment
 \section{Support of Community}
-\midaligned{\em /* Optional - Sort of replaces ``objections from the audience time'' */}
-Officiant:
-\startnarrower Two people in love do not live in isolation. Their love is a source of strength with which they may nourish not only each other but also the world around them. And in turn, we, their community of friends and family, have a responsibility to this couple. By our steadfast care, respect, and love, we can support their marriage and the new family they are creating today.
-\stopnarrower
-\startnarrower Will everyone please rise.
-\stopnarrower
-\blank[big]
-\midaligned{\em /* The good sheeple rise, I am their master */}
-\blank[big]
-Officiant: 
-\startnarrower Will you who are present here today, surround Jason and Laura in love, offering them the joys of your friendship, and supporting them in their marriage?
-\stopnarrower
-All: 
-\startnarrower We will
-\stopnarrower
-\blank[big]
-\midaligned{\em /* Yes my minions, YES. Do as your master commands! */}
-\blank[big]
-Officiant:
-\startnarrower You may be seated.
-\stopnarrower
-\blank[big]
+  \midaligned{\em /* Optional - Sort of replaces ``objections from the 
+                     audience time'' */}
+  Officiant:
+  \startnarrower Two people in love do not live in isolation. Their love is a 
+  source of strength with which they may nourish not only each other but also 
+  the world around them. And in turn, we, their community of friends and 
+  family, have a responsibility to this couple. By our steadfast care, 
+  respect, and love, we can support their marriage and the new family they are 
+  creating today.
+  \stopnarrower
+  \startnarrower Will everyone please rise.
+  \stopnarrower
+  \blank[big]
+  \midaligned{\em /* The good sheeple rise, I am their master */}
+  \blank[big]
+  Officiant: 
+  \startnarrower Will you who are present here today, surround Jason and Laura 
+  in love, offering them the joys of your friendship, and supporting them in 
+  their marriage?
+  \stopnarrower
+  All: 
+  \startnarrower We will
+  \stopnarrower
+  \blank[big]
+  \midaligned{\em /* Yes my minions, YES. Do as your master commands! */}
+  \blank[big]
+  Officiant:
+  \startnarrower You may be seated.
+  \stopnarrower
+  \blank[big]
 \section{Wedding Vows}
-\midaligned{\em /* Really big show, really big! */}
-Officiant: 
-\startnarrower We've come to the point of your ceremony where you're going to say your vows to one another. But before you do that, I ask you to remember that love – which is rooted in faith, trust, and acceptance - will be the foundation of an abiding and deepening relationship. No other ties are more tender, no other vows more sacred than those you now assume. If you are able to keep the vows you take here today, not because of any religious or civic law, but out of a desire to love and be loved by another person fully, without limitation, then your life will have joy and the home you establish will be a place in which you both will find the direction of your growth, your freedom, and your responsibility.
-\stopnarrower
-Officiant:
-\startnarrower Please now read the vows you have written for each other.
-\stopnarrower
-\midaligned{<<Insert vows>> Love, cherish, respect, blah... blah... blah...}
+  \midaligned{\em /* Really big show, really big! */}
+  Officiant: 
+  \startnarrower We've come to the point of your ceremony where you're going 
+  to say your vows to one another. But before you do that, I ask you to 
+  remember that love – which is rooted in faith, trust, and acceptance - will 
+  be the foundation of an abiding and deepening relationship. No other ties 
+  are more tender, no other vows more sacred than those you now assume. If you 
+  are able to keep the vows you take here today, not because of any religious 
+  or civic law, but out of a desire to love and be loved by another person 
+  fully, without limitation, then your life will have joy and the home you 
+  establish will be a place in which you both will find the direction of your 
+  growth, your freedom, and your responsibility.
+  \stopnarrower
+  Officiant:
+  \startnarrower Please now read the vows you have written for each other.
+  \stopnarrower
+  \midaligned{\em /* Love, cherish, respect, blah... blah... blah... */}
 
-Officiant: 
-\startnarrower May I have the rings, please?
-\stopnarrower
-Officiant:
-\startnarrower Please repeat after me: {\em I give you this ring, as a daily reminder of my love for you.}
-\stopnarrower
-One and then the other:
-\startnarrower I give you this ring, as a daily reminder of my love for you.
-\stopnarrower
-Officiant: 
-\startnarrower By the power of your love and commitment, and the power vested in me \footnote{by the Intertron}, I now pronounce you husband and wife! You may kiss each other!
-\stopnarrower
-\blank[big]
+  Officiant: 
+  \startnarrower May I have the rings, please?
+  \stopnarrower
+  Officiant:
+  \startnarrower Please repeat after me: {\em I give you this ring, as a daily 
+    reminder of my love for you.}
+  \stopnarrower
+  One and then the other:
+  \startnarrower I give you this ring, as a daily reminder of my love for you.
+  \stopnarrower
+  Officiant: 
+  \startnarrower By the power of your love and commitment, and the power 
+  vested in me \footnote{by the Intertron}, I now pronounce you husband and 
+  wife! You may kiss each other!
+  \stopnarrower
+  \blank[big]
 \section{Recessional}
-\midaligned{\em Und now I drink! Also, I hit on all your single female friends }
-\midaligned{\em (and possibly the married ones... I will be drinking after all).}
+  \midaligned{\em /* Und now I drink! Also, I hit on all your single female 
+    friends}
+  \midaligned{\em (and possibly the married ones... I will be drinking after 
+    all). */}
 
 \stoptext
 
