Removed the psalm, added the vows and cut jokes
Signed-off-by: Shawn Nock <nock@nock-apple.localdomain>

--HG--
extra : convert_revision : 122d171df0c75743fe22e18d22889067becb3db5

--- a/wedding.tex
+++ b/wedding.tex
@@ -16,11 +16,11 @@
 ]
 \starttext
 \section{Processional}
-  \midaligned{\em /* Wedding party rolls in (looking slick), then Laura (Dress 
-                     worked out great) */}
+  %\midaligned{\em /* Wedding party rolls in (looking slick), then Laura (Dress 
+  %                   worked out great) */}
 \section{Welcome}
-  \midaligned{\em /* Perhaps most importantly, I look awesome. Now I greet some 
-                     people, on with the show. */}
+  %\midaligned{\em /* Perhaps most importantly, I look awesome. Now I greet some 
+  %                   people, on with the show. */}
 \blank[big]
 Officiant: 
 \startnarrower 
@@ -36,9 +36,9 @@ Officiant:
   \blank[big]
 \stopnarrower
 \section{Definition of Marriage}
-  \midaligned{\em /* I, the great dateless wonder, will proceed to school you 
-                     two on the meaning of marriage.}
-  \midaligned{\em Contrary to popular believe, It's serious business! */}
+  %\midaligned{\em /* I, the great dateless wonder, will proceed to school you 
+  %                   two on the meaning of marriage.}
+  %\midaligned{\em Contrary to popular believe, It's serious business! */}
   \blank[big]
   Officiant: 
   \startnarrower Marriage is perhaps the greatest and most challenging 
@@ -54,8 +54,8 @@ Officiant:
 \stopnarrower
 
 \section{Declaration of Intent}
-  \midaligned{\em /* Do you? How 'bout you? Last chance to pull the eject 
-                     handle. */}
+  %\midaligned{\em /* Do you? How 'bout you? Last chance to pull the eject 
+  %                   handle. */}
   \blank[big]
   Officiant: 
   \startnarrower Will you, Jason, take this woman to be your wedded wife?
@@ -70,20 +70,21 @@ Officiant:
   \startnarrower I will
   \stopnarrower
   \blank[big]
+  \page
 \section{Readings}
-  \midaligned{\em /* Welp, you're in the shit now, I guess we better read some 
-                     things that people smarter than us wrote...}
-  \midaligned{\em It'll sound fancy! */}
+  %\midaligned{\em /* Welp, you're in the shit now, I guess we better read some 
+  %                   things that people smarter than us wrote...}
+  %\midaligned{\em It'll sound fancy! */}
   \blank[big]
   Officiant: 
   \startnarrower In the spirit of the importance of strong friendships to a 
-  marriage, Laura and Jason have asked two friends to read selections about 
-  love that especially resonate with them.
+  marriage, Laura and Jason have asked two friends to read a selection about 
+  love that resonates with them.
   \stopnarrower
   \blank[big]
-  \midaligned{\sc 1st Reading}
-  \midaligned{\em /* I suggest Dr. Suess, he was married... and he fought 
-                     facism! */}
+  %\midaligned{\sc 1st Reading (Evan)}
+  %\midaligned{\em /* I suggest Dr. Suess, he was married... and he fought 
+  %                   facism! */}
 \startlines
 \startalignment[center]
 ``Oh the Places You'll Go''
@@ -106,6 +107,11 @@ Out there things can happen and frequently do
 to people as brainy and footsy as you.
 And when things start to happen, don't worry. Don't stew.
 Just go right along. You'll start happening too.
+%\stopalignment
+%\stoplines
+%\midaligned{\sc 2nd Reading (Anne)}
+%\startlines
+%\startalignment[center]
 
 OH! THE PLACES YOU'LL GO!
 
@@ -129,65 +135,10 @@ Yes! You will indeed!
 \stopalignment
 \stoplines
   \blank[big]
-  \midaligned{\em /* What? You think you can do better? */}
-  \blank[big]
-  \midaligned{\sc 2nd Reading}
-  \midaligned{\em /* I suggest something out of Psalms... to keep the fundie's 
-                     from rioting. */}
-  \blank[big]
-\startalignment[center]
-\startlines
-We have no need of words, you and I
-heart speaks to heart while we are close together;
-but I also need to say that I love you:
-I must express my feelings and show you how much I care.
-
-My heart won't need words to talk to you, my God:
-and you don't speak in sentences but in a twinkling as quick as a thought;
-
-nevertheless, words can express my worship:
-if I speak with you for a second, I may need hours to prepare for it.
-
-I long to be conscious of your real presence:
-to be aware of your attention to me in a moment of time.
-
-Yet as soon as you are with me, I have to turn away from you:
-a glimpse of heaven makes me want you to send me to hell!
-\stoplines
-\stopalignment
-\section{Support of Community}
-  \midaligned{\em /* Optional - Sort of replaces ``objections from the 
-                     audience time'' */}
-  Officiant:
-  \startnarrower Two people in love do not live in isolation. Their love is a 
-  source of strength with which they may nourish not only each other but also 
-  the world around them. And in turn, we, their community of friends and 
-  family, have a responsibility to this couple. By our steadfast care, 
-  respect, and love, we can support their marriage and the new family they are 
-  creating today.
-  \stopnarrower
-  \startnarrower Will everyone please rise.
-  \stopnarrower
-  \blank[big]
-  \midaligned{\em /* The good sheeple rise, I am their master */}
-  \blank[big]
-  Officiant: 
-  \startnarrower Will you who are present here today, surround Jason and Laura 
-  in love, offering them the joys of your friendship, and supporting them in 
-  their marriage?
-  \stopnarrower
-  All: 
-  \startnarrower We will
-  \stopnarrower
-  \blank[big]
-  \midaligned{\em /* Yes my minions, YES. Do as your master commands! */}
-  \blank[big]
-  Officiant:
-  \startnarrower You may be seated.
-  \stopnarrower
-  \blank[big]
+  %\midaligned{\em /* What? You think you can do better? */}
+  %\blank[big]
 \section{Wedding Vows}
-  \midaligned{\em /* Really big show, really big! */}
+  %\midaligned{\em /* Really big show, really big! */}
   Officiant: 
   \startnarrower We've come to the point of your ceremony where you're going 
   to say your vows to one another. But before you do that, I ask you to 
@@ -203,7 +154,24 @@ a glimpse of heaven makes me want you to send me to hell!
   Officiant:
   \startnarrower Please now read the vows you have written for each other.
   \stopnarrower
-  \midaligned{\em /* Love, cherish, respect, blah... blah... blah... */}
+  %\midaligned{\em /* Love, cherish, respect, blah... blah... blah... */}
+  Laura:
+  \startnarrower
+  Jason,
+
+	For the last five and a half years, you have been an incredible force in my life. You are my best friend, my confidante, my strongest supporter, and the person I can’t wait to spend the rest of my life with. In that time I promise to stand by your side as together we face the challenges of life, and share the joy of living. I will take care of you when you’re sick, comfort you when you’re sad, and laugh with you every day. I promise to always be there for you when you need my most. If life’s got you down and you just need a hug, I’ll be there. If you want to sit around in your pajamas on a Sunday and play video games all day, I’ll be there. If you want to fall asleep next to someone while watching QVC in bed, I’ll be there. And if you want someone to love you for the rest of your life, I’m here. I love you, Jason.
+\stopnarrower
+Jason:
+\startnarrower
+Laura,
+
+Five years ago you sent me a letter with the key to your heart,
+each day since then you have become even more my friend,
+someone to laugh with, count on, and especially, love.
+There is no one else I would rather spend eatch coming day with.
+Five years ago you sent me a letter with the key to your heart,
+today in return I promise you my eternal friendship, support, and love.
+\stopnarrower  
 
   Officiant: 
   \startnarrower May I have the rings, please?
@@ -216,8 +184,8 @@ a glimpse of heaven makes me want you to send me to hell!
   \startnarrower I give you this ring, as a daily reminder of my love for you.
   \stopnarrower
   Officiant: 
-  \startnarrower By the power of your love and commitment, and the power 
-  vested in me \footnote{by the Intertron}, I now pronounce you husband and 
+  \startnarrower By the power of your love and commitment
+  I now pronounce you husband and 
   wife! You may kiss each other!
   \stopnarrower
   \blank[big]
