Reworded the Def. of Marriage and worked on flow
Signed-off-by: Shawn Nock <nock@nock-apple.localdomain>

--HG--
extra : convert_revision : 85f61e74171d37f32ce4423df047500ac6b0a673

--- a/wedding.tex
+++ b/wedding.tex
@@ -5,7 +5,7 @@
 \setuppagenumbering[state=off]
 \setuphead[section][align={center, nothyphenated, verytolerant},
   textstyle=\sc \tfc]
-\setupbodyfont[10pt]
+\setupbodyfont[11pt]
 \setupinteraction[state=start,  
   title={Katterhenry-Showalter Wedding Ceremony},
   subtitle={Wedding Ceremony},
@@ -44,47 +44,30 @@ Officiant:
   \startnarrower Marriage is perhaps the greatest and most challenging 
   adventure of human relationships. No ceremony can create your marriage; only 
   you can do that – through love and patience; through dedication and 
-  perseverance; through talking and listening, helping and supporting and 
-  believing in each other; through tenderness and laughter; through learning 
-  to forgive, learning to appreciate your differences, and by learning to make 
-  the important things matter, and to let go of the rest. What this ceremony 
-  can do is to witness and affirm the choice you make to stand together as 
+  perseverance; by talking and listening to each other, by helping, supporting and 
+  believing in your spouse's goals; with tenderness and laughter; while learning 
+  to forgive and to appreciate your differences. Make the important things matter, 
+  and let go of the rest. What this ceremony can do is witness and affirm the 
+  choice you make to stand together as 
   lifemates and partners.
   \blank[big]
 \stopnarrower
 
-\section{Declaration of Intent}
-  %\midaligned{\em /* Do you? How 'bout you? Last chance to pull the eject 
-  %                   handle. */}
-  \blank[big]
-  Officiant: 
-  \startnarrower Will you, Jason, take this woman to be your wedded wife?
-  \stopnarrower
-  Groom: 
-  \startnarrower I will
-  \stopnarrower
-  Officiant: 
-  \startnarrower Will you, Laura, take this man to be your wedded husband?
-  \stopnarrower
-  Bride:
-  \startnarrower I will
-  \stopnarrower
-  \blank[big]
-  \page
 \section{Readings}
   %\midaligned{\em /* Welp, you're in the shit now, I guess we better read some 
   %                   things that people smarter than us wrote...}
   %\midaligned{\em It'll sound fancy! */}
   \blank[big]
   Officiant: 
-  \startnarrower In the spirit of the importance of strong friendships to a 
-  marriage, Laura and Jason have asked two friends to read a selection about 
+  \startnarrower Jason and Laura both believe that strong friendships are important to a 
+  marriage. With that in mind, they have asked two friends to read a selection about 
   love that resonates with them.
   \stopnarrower
   \blank[big]
   %\midaligned{\sc 1st Reading (Evan)}
   %\midaligned{\em /* I suggest Dr. Suess, he was married... and he fought 
   %                   facism! */}
+\page
 \startlines
 \startalignment[center]
 ``Oh the Places You'll Go''
@@ -136,7 +119,24 @@ Yes! You will indeed!
 \stoplines
   \blank[big]
   %\midaligned{\em /* What? You think you can do better? */}
-  %\blank[big]
+ \section{Declaration of Intent}
+  %\midaligned{\em /* Do you? How 'bout you? Last chance to pull the eject 
+  %                   handle. */}
+  \blank[big]
+  Officiant: 
+  \startnarrower Laura and Jason will now declare their intent to be married.
+  Will you, Jason, take Laura to be your wedded wife?
+  \stopnarrower
+  Jason: 
+  \startnarrower I will
+  \stopnarrower
+  Officiant: 
+  \startnarrower Will you, Laura, take Jason to be your wedded husband?
+  \stopnarrower
+  Laura:
+  \startnarrower I will
+  \stopnarrower
+  \blank[big] %\blank[big]
 \section{Wedding Vows}
   %\midaligned{\em /* Really big show, really big! */}
   Officiant: 
@@ -152,7 +152,7 @@ Yes! You will indeed!
   growth, your freedom, and your responsibility.
   \stopnarrower
   Officiant:
-  \startnarrower Please now read the vows you have written for each other.
+  \startnarrower Please read the vows you have written for each other.
   \stopnarrower
   %\midaligned{\em /* Love, cherish, respect, blah... blah... blah... */}
   Laura:
@@ -161,6 +161,7 @@ Yes! You will indeed!
 
 	For the last five and a half years, you have been an incredible force in my life. You are my best friend, my confidante, my strongest supporter, and the person I can’t wait to spend the rest of my life with. In that time I promise to stand by your side as together we face the challenges of life, and share the joy of living. I will take care of you when you’re sick, comfort you when you’re sad, and laugh with you every day. I promise to always be there for you when you need my most. If life’s got you down and you just need a hug, I’ll be there. If you want to sit around in your pajamas on a Sunday and play video games all day, I’ll be there. If you want to fall asleep next to someone while watching QVC in bed, I’ll be there. And if you want someone to love you for the rest of your life, I’m here. I love you, Jason.
 \stopnarrower
+\page
 Jason:
 \startnarrower
 Laura,
@@ -174,13 +175,20 @@ today in return I promise you my eternal friendship, support, and love.
 \stopnarrower  
 
   Officiant: 
-  \startnarrower May I have the rings, please?
+  \startnarrower May we have the rings, please?
   \stopnarrower
   Officiant:
-  \startnarrower Please repeat after me: {\em I give you this ring, as a daily 
+  \startnarrower Laura, Please repeat after me: {\em I give you this ring, as a daily 
     reminder of my love for you.}
   \stopnarrower
-  One and then the other:
+  Laura:
+  \startnarrower I give you this ring, as a daily reminder of my love for you.
+  \stopnarrower
+  Officiant:
+  \startnarrower Jason, Please repeat after me: {\em I give you this ring, as a daily 
+    reminder of my love for you.}
+  \stopnarrower
+  Jason:
   \startnarrower I give you this ring, as a daily reminder of my love for you.
   \stopnarrower
   Officiant: 
@@ -190,10 +198,10 @@ today in return I promise you my eternal friendship, support, and love.
   \stopnarrower
   \blank[big]
 \section{Recessional}
-  \midaligned{\em /* Und now I drink! Also, I hit on all your single female 
-    friends}
-  \midaligned{\em (and possibly the married ones... I will be drinking after 
-    all). */}
+  %\midaligned{\em /* Und now I drink! Also, I hit on all your single female 
+  % friends}
+  %\midaligned{\em (and possibly the married ones... I will be drinking after 
+  %  all). */}
 
 \stoptext
 
