Final flow changes.
Signed-off-by: Shawn Nock <nock@nock-apple.localdomain>

--HG--
extra : convert_revision : 022cb232f37122b5e36063faebb15d0c8d6832dc

--- a/wedding.tex
+++ b/wedding.tex
@@ -46,7 +46,8 @@ Officiant:
   you can do that – through love and patience; through dedication and 
   perseverance; by talking and listening to each other, by helping, supporting and 
   believing in your spouse's goals; with tenderness and laughter; while learning 
-  to forgive and to appreciate your differences. Make the important things matter, 
+  to forgive and to appreciate your differences. Marriage challenges you to make the
+  important things count, 
   and let go of the rest. What this ceremony can do is witness and affirm the 
   choice you make to stand together as 
   lifemates and partners.
