Input from Joey, Nikki, Anne, and Joe
Signed-off-by: Shawn Nock <nock@nock-apple.localdomain>

--HG--
extra : convert_revision : 8305276e5f94fe09b55c0e24233c88ac28a16a55

--- a/wedding.tex
+++ b/wedding.tex
@@ -30,7 +30,7 @@ Officiant:
   and Jason to start their married life together surrounded by the those most 
   important to them.
   \blank
-  Jason and Laura thank you for your presence here today, and now ask for your 
+  Jason and Laura would like to thank you for your presence here today, and now ask for your 
   blessing, encouragement, and lifelong support, for their decision to be 
   married.
   \blank[big]
@@ -43,8 +43,8 @@ Officiant:
   Officiant: 
   \startnarrower Marriage is perhaps the greatest and most challenging 
   adventure of human relationships. No ceremony can create your marriage; only 
-  you can do that – through love and patience; through dedication and 
-  perseverance; by talking and listening to each other, by helping, supporting and 
+  you can do that---through love and patience; through dedication and 
+  perseverance; by communicating with each other---by helping, supporting and 
   believing in your spouse's goals; with tenderness and laughter; while learning 
   to forgive and to appreciate your differences. Marriage challenges you to make the
   important things count, 
@@ -147,7 +147,7 @@ Yes! You will indeed!
   be the foundation of an abiding and deepening relationship. No other ties 
   are more tender, no other vows more sacred than those you now assume. If you 
   are able to keep the vows you take here today, not because of any religious 
-  or civic law, but out of a desire to love and be loved by another person 
+  or civic law, but out of a desire to love and be loved by each other 
   fully, without limitation, then your life will have joy and the home you 
   establish will be a place in which you both will find the direction of your 
   growth, your freedom, and your responsibility.
